<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".indexTabFragment.BookDetailFragment">

    <!-- TODO:顶部导航栏 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/tabActive">
            <!-- TODO:顶部返回按键 -->
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:padding="3dp">
                <TextView
                    android:id="@+id/detail_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_direction_left_24"
                    android:background="#01000000"
                    android:drawablePadding="0dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/detail_back"/>
            </LinearLayout>
            <!-- TODO:顶部标题栏 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>
    <!-- TODO:书籍详细信息部分 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- TODO:书籍封面图片 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp">

                <com.example.activity.component.RoundImageView
                    android:id="@+id/iv_bookImg"
                    android:layout_width="76dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY" />
            </LinearLayout>
            <!-- TODO:右边书名作者名类型 -->
            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_gravity="end"
                android:orientation="vertical">
                <!-- TODO:书籍id不显示 -->
                <TextView
                    android:id="@+id/tv_bookId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <!-- TODO:书籍名 -->
                <TextView
                    android:id="@+id/tv_bookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <!-- TODO:书籍作者名 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_authorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_author_span"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_arrow_right_16"
                        android:textSize="16sp" />
                </LinearLayout>
                <!-- TODO:书籍类型名 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_typeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tv_typeName_span"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/split"
                        android:textColor="@color/lightGray"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <!-- TODO:书籍简介栏 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"
                android:padding="3dp">
                <TextView
                    android:id="@+id/tv_intro_span"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/detail_intro"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:minLines="3"/>
        </LinearLayout>
        <!-- TODO:书籍目录栏 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="6dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"
                android:padding="3dp">
                <TextView
                    android:id="@+id/tv_catalog_span"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/detail_catalog"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:maxLines="3"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/detail_add"/>
    </LinearLayout>
</LinearLayout>