<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bookContent"
    android:orientation="vertical"
    android:id="@+id/bc_main_content"
    tools:context=".indexTabFragment.BookContentFragment">

    <!--TODO:顶部标题栏-->
    <LinearLayout
        android:id="@+id/bc_top_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:orientation="horizontal"
        android:textColor="@color/white"
        android:background="@color/colorBlack"
        android:visibility="invisible">
        <!-- TODO:顶部返回按键
                android:background="#01000000"-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bc_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:gravity="center"
                android:drawableStart="@drawable/ic_direction_left_24"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/detail_back"/>
        </LinearLayout>
        <!-- TODO:顶部标题栏 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/bc_top_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:gravity="center"
                android:text="标题"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
            <!-- TODO:顶部标题栏 -->
            <TextView
                android:id="@+id/bc_top_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingStart="6dp"
                android:gravity="right"
                android:drawableLeft="@drawable/ic_elipsis_svg_24"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" android:paddingTop="16dp" android:paddingBottom="16dp"
       android:orientation="vertical">
       <!--TODO:中间内容部分-->
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:scrollbars="none">

           <LinearLayout
               android:id="@+id/bc_page_content"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="6dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   android:layout_marginStart="6dp"
                   android:layout_marginEnd="6dp">
                   <!--TODO:顶部标题居中标题栏-->
                   <TextView
                       android:id="@+id/bc_content_title"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textAlignment="center"
                       android:textSize="18sp"
                       android:textColor="@color/bookTitleDark"/>
                   <!--TODO:正文内容栏-->
<!--                   <WebView-->
<!--                       android:id="@+id/bc_content"-->
<!--                       android:layout_width="match_parent"-->
<!--                       android:layout_height="wrap_content"-->
<!--                       android:textSize="16sp"-->
<!--                       android:textColor="@color/bookTitleDark"-->
<!--                       android:background="@color/bookContent">-->
<!--                   </WebView>-->
                   <TextView
                       android:id="@+id/bc_content"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       android:textColor="@color/bookTitleDark"/>
               </LinearLayout>

           </LinearLayout>
       </ScrollView>

    </LinearLayout>
    <!-- TODO:页面跳转选择器 -->
    <LinearLayout
        android:id="@+id/bc_page_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:orientation="horizontal"
        android:textColor="@color/white"
        android:background="@color/colorBlack"
        android:visibility="invisible" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            android:padding="6dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <!-- TODO:上一页按钮 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start">
                    <Button
                        android:id="@+id/bc_prev_page"
                        android:layout_width="86dp"
                        android:layout_height="34dp"
                        android:background="@drawable/corner_radius_button_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/detail_prev_page"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
                <!-- TODO:页面选择器 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                    <Button
                        android:id="@+id/bc_back_catalog"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:background="@drawable/corner_radius_button_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/bc_back_catalog"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- TODO:下一页按钮 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">
                <Button
                    android:id="@+id/bc_next_page"
                    android:layout_width="86dp"
                    android:layout_height="34dp"
                    android:text="@string/detail_next_page"
                    android:textSize="16sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textAlignment="center"
                    android:background="@drawable/corner_radius_button_content"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>